# langextract-rs

./: Cargo.toml  README.md
examples/: consciousness_extraction.py  index_chat_repo.py  literary_extraction.py
src/: chunking.rs  codebook.rs  crystal.rs  extraction.rs  grammar.rs  grounding.rs  lib.rs
